cmss/main/default/objects/Log__c/fields/ClassMethodName__c.field-meta.xml
<CustomField>
    <fullName>ClassMethodName__c</fullName>
    <label>Class method name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>