cmss/main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>choose debug log level, default is 1st value [debug]</description>
    <inlineHelpText>choose debug log level, default is 1st value [debug]</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>debug</fullName>
                <default>true</default>
                <label>debug</label>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
            <value>
                <fullName>warn</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>