cmss/main/default/objects/Log__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Transaction UUID used to related logs into one transaction.</description>
    <externalId>true</externalId>
    <label>TransactionId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>