cmss/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>Level__c</columns>
    <columns>Message__c</columns>
    <columns>ClassMethodName__c</columns>
    <columns>Exception__c</columns>
    <columns>Payload__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>